--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@coreui/chartjs": "^4.0.0",
     "@coreui/coreui": "^5.0.2",
     "@coreui/icons": "^3.0.1",
-    "@coreui/icons-react": "^2.2.1",
+    "@coreui/icons-react": "^2.3.0",
     "@coreui/react": "^5.1.0",
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
@@ -33,10 +33,17 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.2.1",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^6.26.0",
+    "react-toastify": "^10.0.5",
+    "react-transition-group": "^4.4.5",
     "redux": "5.0.1",
-    "simplebar-react": "^3.2.5"
+    "simplebar-react": "^3.2.5",
+    "toastify-js": "^1.12.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
