--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "classnames": "^2.5.1",
     "core-js": "^3.37.1",
     "prop-types": "^15.8.1",
+    "randomcolor": "^0.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
